objects/MCM_UserDefined_Cost__c.object
<CustomObject>
    <fields>
        <fullName>MCM__c</fullName>
        <label>MCM</label>
        <referenceTo>PCM_MCM_Detail__c</referenceTo>
        <relationshipLabel>MCM UserDefined Cost</relationshipLabel>
        <relationshipName>MCM_UserDefined_Cost</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Q10__c</fullName>
        <label>Q10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q11__c</fullName>
        <label>Q11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q12__c</fullName>
        <label>Q12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>MCM UserDefined Cost</label>
    <nameField>
        <label>MCM_UserDefined_Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MCM UserDefined Cost</pluralLabel>
    <recordTypes>
        <fullName>Assembly_Substrate_Cost</fullName>
        <active>true</active>
        <label>Assembly &amp; Substrate Cost</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>